--- a/templates/login.html
+++ b/templates/login.html
@@ -119,7 +119,7 @@
               <form action="#" class="signup-form">
                 <div class="form-group mb-3">
                   <label class="label" for="email">Email Address</label>
-                  <input type="text" class="form-control" placeholder="johndoe@gmail.com">
+                  <input type="text" class="form-control" placeholder="Email Address">
                 </div>
                 <div class="form-group mb-3">
                   <label class="label" for="password">Password</label>
