--- a/templates/registration.html
+++ b/templates/registration.html
@@ -116,11 +116,11 @@
               <form action="#" class="signup-form">
                 <div class="form-group mb-3">
                   <label class="label" for="name">Full Name</label>
-                  <input type="text" class="form-control" placeholder="John Doe">
+                  <input type="text" class="form-control" placeholder="Full Name">
                 </div>
                 <div class="form-group mb-3">
                   <label class="label" for="email">Email Address</label>
-                  <input type="text" class="form-control" placeholder="johndoe@gmail.com">
+                  <input type="text" class="form-control" placeholder="Email Address">
                 </div>
                 <div class="form-group mb-3">
                   <label class="label" for="password">Password</label>
