--- a/templates/login.html
+++ b/templates/login.html
@@ -116,21 +116,22 @@
         <div class="row justify-content-center">
           <div class="col-md-7 col-lg-5">
             <div class="login-wrap p-4 p-md-5 mt-5">
-              <form action="#" class="signup-form">
+              <form method="POST" action="{% url 'user_app:login_view' %}" class="signup-form">
+                {% csrf_token %}
                 <div class="form-group mb-3">
-                  <label class="label" for="email">Email Address</label>
-                  <input type="text" class="form-control" placeholder="Email Address">
+                  <label class="label" for="username">Username</label>
+                  <input name="username" type="text" class="form-control" placeholder="Username">
                 </div>
                 <div class="form-group mb-3">
                   <label class="label" for="password">Password</label>
-                  <input id="password-field" type="password" class="form-control" placeholder="Password">
+                  <input name="password" id="password-field" type="password" class="form-control" placeholder="Password">
                   <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
                 </div>
                 <div class="form-group">
                   <button type="submit" class="form-control btn btn-primary submit px-3">Login</button>
                 </div>
               </form>
-              <p><span class="text-secondary">Not yet a member?</span> <a data-toggle="tab" href="#signin">Register</a></p>
+              <p><span class="text-secondary">Not yet a member?</span> <a data-toggle="tab" href="{% url 'user_app:register_view' %}">Register</a></p>
               <div class="txt1 text-center p-t-54 p-b-20">
                 <span>
                   Or sign up using
