--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -1,11 +1,11 @@
-{% extends "base_user.html" %}
+{% extends "base_admin.html" %}
 {% load static %}
 
 
 {% block content %}
 
 <div style="text-align: center; margin-top: 70px;" >
-    <h1>Welcome to TeknoTrade!</h1>
+    <h1>Welcome Admin to TeknoTrade!</h1>
 </div>
 
 
