--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Contact Us</title>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
-<link rel="stylesheet" type="text/css" href="static/css/style.css">
-</head>
+{% extends "base_user.html" %}
+{% load static %}
+
+ 
+
+{% block content %}
+
 <style>
 	@import url('https://fonts.googleapis.com/ css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
 *
@@ -171,6 +170,7 @@
 	}
 }
 </style>
+
 <body>
 	<section class="contact">
 		<div class="content">
@@ -228,5 +228,6 @@
 			</div>
 		</div>
 	</section>
-</body>
-</html>
+
+
+{% endblock content %}
