--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -8,7 +8,7 @@
     <!-- <link rel="stylesheet" href="css/mdb.min.css" /> -->
     <link rel="stylesheet" href="../static/css/carousel.css">
     <link rel="stylesheet" href="../static/css/mdb.min.css">
-    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../static/css/styles.css">
  
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
    
