--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -1,3 +1,10 @@
+{% extends "base_user.html" %}
+{% load static %}
+
+ 
+
+{% block content %}
+
 <title>About Us</title>
 <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -440,3 +447,7 @@
 
 </body>
 </html>
+
+
+
+{% endblock content %}
