--- a/templates/base_user.html
+++ b/templates/base_user.html
@@ -26,7 +26,7 @@
                 <a class="nav-link active" aria-current="page" href="{% url 'user_app:home_view' %}">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About Us</a>   
+                <a class="nav-link" href="{% url 'user_app:about_view' %}">About Us</a>   
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'user_app:contact_view' %}">Contact Us</a> 
