Updated base user html

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -175,9 +175,7 @@
 	<section class="contact">
 		<div class="content">
 			<h2>Contact Us</h2>
-			<p>asjkdhajksdhasjkdhjkqwhejkqwheqwkejhqwekjqwehqwjkehqwejkhasd
-			qwjkehqwjkehawjekhqwkejhqwekjqwhekjqwhekasdhqhwekjaehasjkdhkqjw
-		asjkhdghasjdgasdhjagsdjhasgdahjsdgadjhagsdhjasdgjkqweasdasdnjqwwe.</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse bibendum risus nunc, at fringilla urna aliquam non. Cras convallis aliquam massa, vitae feugiat massa interdum mattis.</p>
 		</div>	
 		<div class="container">
 			<div class="contactInfo">
