--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -5,21 +5,6 @@
 
 {% block content %}
 
-<title>About Us</title>
-<meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
-    <!-- Google Fonts Roboto -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" />
-    <!-- MDB -->
-    <!-- <link rel="stylesheet" href="css/mdb.min.css" /> -->
-    <link rel="stylesheet" href="../static/css/carousel.css">
-    <link rel="stylesheet" href="../static/css/mdb.min.css">
-    <link rel="stylesheet" href="../static/css/styles.css">
- 
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
-   
-</head>
 <style>
  .about-picture{
     /* border-radius: 50%; */
@@ -63,71 +48,6 @@
  }
 </style>
 <body>
-    <!--Main Navigation-->
-<header>
-  <!-- Navbar -->
-  <nav class="sticky-top navbar navbar-expand-lg navbar-dark d-none d-lg-block" style="z-index: 2000;">
-    <div class="container-fluid">
-      <!-- Navbar brand -->
-      <a class="navbar-brand nav-link" href="#">
-        <strong>TT | TeknoTrade</strong>
-      </a>
-      <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
-        aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
-        <i class="fas fa-bars"></i>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarExample01">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item active">
-            <a class="nav-link" aria-current="page" href="/">Home</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdownMenuLink"
-              role="button"
-              data-mdb-toggle="dropdown"
-              aria-expanded="false"
-            >User Portals
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <li>
-                <a class="dropdown-item" href="/client-login">User Portal</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="/establishments-login">Establishment Portal</a>
-              </li>
-              
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#about-us">About us</a>
-          </li>
-        </ul>
-
-        <ul class="navbar-nav d-flex flex-row">
-          <!-- Icons -->
-          <li class="nav-item me-3 me-lg-0">
-            <a class="nav-link" href="#" rel="nofollow" >
-              <i class="fab fa-facebook-f"></i>
-            </a>
-          </li>
-          <li class="nav-item me-3 me-lg-0">
-            <a class="nav-link" href="#" rel="nofollow">
-              <i class="fab fa-twitter"></i>
-            </a>
-          </li>
-          <li class="nav-item me-3 me-lg-0">
-            <a class="nav-link" href=https://github.com/fmarie-it/teknotrade rel="nofollow" target="_blank">
-              <i class="fab fa-github"></i>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <!-- Navbar -->
   <!-- Carousel wrapper -->
   <div id="introCarousel" class="carousel slide carousel-fade shadow-2-strong" data-mdb-ride="carousel">
     <!-- Indicators -->
@@ -146,7 +66,7 @@
             <div class="text-white text-center">
               <h1 class="mb-3">TeknoTrade: A Technologian Barter System with auto-tagging technology and distance based filtering</h1>
               <h5 class="mb-4">We help you find what you we're looking for</h5>
-              <a
+              <!-- <a
                 class="btn btn-outline-light btn-lg m-2"
                 href="/establishments-login"
                 role="button"
@@ -157,7 +77,7 @@
               <a class="btn btn-outline-light btn-lg m-2"
                 href="/establishments-registration"
                 target="_blank"
-                role="button" >Sign up for an establishment account</a >
+                role="button" >Sign up for an establishment account</a > -->
             </div>
           </div>
         </div>
@@ -189,7 +109,7 @@
                 <div class="col-md-4">
                     <div class="card card-dodong">
                         <div style="border-radius: 50%;" class="bg-image hover-overlay ripple about-picture" data-mdb-ripple-color="light">
-                            <img src="./images/image1.jpg"
+                            <img src="{% static 'img/image1.jpg' %}"
                               class="img-fluid" height="100%"/>
                             <a href="#!">
                               <div class="mask" style="background: rgba(251, 251, 251, 0.15);"></div>
@@ -225,7 +145,7 @@
                 <div class="col-md-4">
                     <div class="card card-dodong">
                         <div style="border-radius: 50%;" class="bg-image hover-overlay ripple about-picture" data-mdb-ripple-color="light">
-                            <img src="./images/image3.jpg"
+                            <img src="{% static 'img/image3.jpg' %}"
                               class="img-fluid" height="100%"/>
                             <a href="#!">
                               <div class="mask" style="background: rgba(251, 251, 251, 0.15);"></div>
@@ -260,7 +180,7 @@
                 <div class="col-md-4">
                     <div class="card card-dodong">
                         <div style="border-radius: 50%;" class="bg-image hover-overlay ripple about-picture" data-mdb-ripple-color="light">
-                            <img src="./images//image2.jpg"
+                            <img src="{% static 'img/image2.jpg' %}"
                               class="img-fluid" height="100%"/>
                             <a href="#!">
                               <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
@@ -298,7 +218,7 @@
                 <div class="col-md-4">
                     <div class="card card-dodong">
                         <div style="border-radius: 50%;" class="bg-image hover-overlay ripple about-picture" data-mdb-ripple-color="light">
-                            <img src="./images/image4.jpg"
+                            <img src="{% static 'img/image4.jpg' %}"
                               class="img-fluid" height="100%"/>
                             <a href="#!">
                               <div class="mask" style="background-color: rgba(0, 0, 0, 0.4)"></div>   
@@ -332,7 +252,7 @@
                 <div class="col-md-4">
                     <div class="card card-dodong">
                         <div style="border-radius: 50%;" class="bg-image hover-overlay ripple about-picture" data-mdb-ripple-color="light">
-                            <img src="./images/image5.png"
+                            <img src="{% static 'img/image5.png' %}"
                               class="img-fluid" height="100%"/>
                             <a href="#!">
                               <div class="mask" style="background: rgba(251, 251, 251, 0.15);"></div>
@@ -379,74 +299,10 @@
   </div>
 </main>
 <!--Main layout-->
-<!--Footer-->
-<footer class="bg-light text-lg-start">
-  <div class="text-center py-4 align-items-center mt-5">
-    <p>Powered by: </p>
-  
-    <a href="https://www.python.org/"
-      class="btn btn-dark m-1"
-      role="button"
-      rel="nofollow"
-      target="_blank">
-    <i class="fab fa-python fa-2x"></i>
-    </a>
-    <a
-      href="https://developer.mozilla.org/en-US/docs/Web/HTML"
-      class="btn btn-warning m-1"
-      role="button"
-      rel="nofollow"
-      target="_blank"
-    >
-    <i class="fab fa-html5 fa-2x"></i>
-    </a>
-    <a 
-    href="https://www.w3schools.com/css/css_intro.asp"
-    role="button"
-    rel="nofollow"
-    class="btn btn-success m-1"
-    target="_blank"
-    >
-    <i class="fab fa-css3-alt fa-2x"></i>
-  </a>
-    <a
-      href="https://getbootstrap.com/docs/5.0/getting-started/introduction/"
-      class="btn btn-danger m-1"
-      role="button"
-      rel="nofollow"
-      target="_blank"
-    >
-    <i class="fab fa-bootstrap fa-2x"></i>
-    </a>
-    <a
-      href="https://www.djangoproject.com/"
-      class="btn btn-primary m-1"
-      role="button"
-      rel="nofollow"
-      target="_blank"
-    >
-    <i class="fas fa-database fa-2x"></i>
-    </a>
-    
-    
-  </div>
-  <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-    © 2021 Copyright:
-    <a class="text-dark" href="#">The Irregulars</a>. All Rights Reserved.
-  </div>
-  <!-- Copyright -->
-</footer>
-<!--Footer-->
-<!-- MDB -->
-<script type="text/javascript" src="./js/mdb.min.js.map"></script>
-<script src="./js/mdb.min.js"></script>
-<!-- Custom scripts -->
-<!-- <script type="text/javascript" src="js/script.js"></script> -->
-<!-- <script src="/public/maindashboard/js/"></script> -->
 
-</body>
-</html>
+
+
+
 
 
 
