--- a/templates/base_user.html
+++ b/templates/base_user.html
@@ -9,16 +9,16 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+   
+    <!-- Google Fonts -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
-    <!-- Google Fonts Roboto -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" />
     <!-- MDB -->
-    <!-- <link rel="stylesheet" href="css/mdb.min.css" /> -->
+    <link rel="stylesheet" href="{% static 'css/mdb.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/carousel.css' %}">
     <link rel="stylesheet" href="{% static 'css/mdb.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
- 
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
    
     <title>TeknoTrade</title>
   </head>
@@ -29,7 +29,7 @@
       <nav class="sticky-top navbar navbar-expand-lg navbar-dark d-none d-lg-block" style="z-index: 2000;">
         <div class="container-fluid">
           <!-- Navbar brand -->
-          <a class="navbar-brand nav-link" href="#">
+          <a class="navbar-brand nav-link" href="{% url 'user_app:home_view' %}">
             <strong>TT | TeknoTrade</strong>
           </a>
           <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
@@ -166,8 +166,8 @@
       <!--Footer-->
 
       <!-- MDB -->
-      <script type="text/javascript" src="./js/mdb.min.js.map"></script>
-      <script src="./js/mdb.min.js"></script>
+      <script type="text/javascript" src="{% static 'js/mdb.min.js.map' %}"></script>
+      <script src="{% static 'js/mdb.min.js' %}"></script>
       <!-- Custom scripts -->
       <!-- <script type="text/javascript" src="js/script.js"></script> -->
       <!-- <script src="/public/maindashboard/js/"></script> -->
