--- a/templates/contact.html
+++ b/templates/contact.html
@@ -7,15 +7,15 @@
 
 <style>
 	body {
-        font-family: "Lato", Arial, sans-serif;
-        font-size: 16px;
-        line-height: 1.8;
-        font-weight: normal;
         background: #f2d6eb;
         color: gray;
       }
 	.contact
 	{
+		font-family: "Lato", Arial, sans-serif;
+        font-size: 16px;
+		line-height: 1.8;
+        font-weight: normal;
 		position: relative;
 		min-height: 100vh;
 		padding: 50px 100px;
@@ -95,6 +95,7 @@
 	}
 	.contactForm h2
 	{
+		padding-bottom: 10px;
 		font-size: 30px;
 		color: #fff;
 		font-weight: 500;
@@ -121,7 +122,7 @@
 	{
 		position: absolute;
 		left: 0;
-		padding: 5px 0;
+		padding: 0px 0;
 		font-size: 16px;
 		margin: 10px 0;
 		pointer-events: none;
