--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -5,179 +5,69 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-   
-    <!-- Google Fonts -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
-    <!-- MDB -->
-    <link rel="stylesheet" href="{% static 'css/mdb.min.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/carousel.css' %}">
-    <link rel="stylesheet" href="{% static 'css/mdb.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-   
+
     <title>TeknoTrade</title>
   </head>
   <body>
-  <!--Main Navigation-->
-  <header>
-    <!-- Navbar -->
-      <nav class="sticky-top navbar navbar-expand-lg navbar-dark d-none d-lg-block" style="z-index: 2000;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <!-- Navbar brand -->
-          <a class="navbar-brand nav-link" href="{% url 'admin_app:admin_view' %}">
-            <strong>TT | TeknoTrade</strong>
-          </a>
-          <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
-            aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="fas fa-bars"></i>
+        <img class="" src="{% static 'img/sample-logo.png' %}" width="70px" alt="" />
+        <!-- <a class="navbar-brand" href="{% url 'user_app:home_view' %}">TeknoTrade LOGO</a> -->
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarExample01">
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item active">
-                <a class="nav-link" aria-current="page" href="{% url 'admin_app:admin_view' %}">Home</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  id="navbarDropdownMenuLink"
-                  role="button"
-                  data-mdb-toggle="dropdown"
-                  aria-expanded="false"
-                >Admin Portals</a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li>
-                    <a class="dropdown-item" href="/client-login">User Portal</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="/establishments-login">Establishment Portal</a>
-                  </li>
-                </ul>
-              </li>
-              <!-- <li class="nav-item">
-                <a class="nav-link" href="{% url 'user_app:about_view' %}">About us</a>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'admin_app:admin_view' %}">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'user_app:contact_view' %}">Contact us</a>
-              </li> -->
+                <a class="nav-link" href="#">About Us</a>   
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact Us</a> 
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dropdown
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">ADMIN</a>
+              </li>
             </ul>
-
-            <!-- <form class="d-flex">
+            <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
-            <br> -->
-
-            <ul class="navbar-nav d-flex flex-row">
-              <!-- Icons -->
-              <li class="nav-item me-3 me-lg-0">
-                <a class="nav-link" href="#" rel="nofollow" >
-                  <i class="fab fa-facebook-f"></i>
-                </a>
-              </li>
-              <li class="nav-item me-3 me-lg-0">
-                <a class="nav-link" href="#" rel="nofollow">
-                  <i class="fab fa-twitter"></i>
-                </a>
-              </li>
-              <li class="nav-item me-3 me-lg-0">
-                <a class="nav-link" href=https://github.com/fmarie-it/teknotrade rel="nofollow" target="_blank">
-                  <i class="fab fa-github"></i>
-                </a>
-              </li>
-              <!-- <li class="nav-item me-3 me-lg-0">
-                <a class="btn btn-outline-success" href="{% url 'user_app:logout_view' %}">Logout</a>
-              </li> -->
-            </ul>
-            
-            <div class="navbar-nav d-flex flex-row">
-              <a class="btn btn-outline-light" href="{% url 'user_app:logout_view' %}">Logout</a>   
+            <br>
+            <div class="nav-item">
+                <a class="btn btn-outline-success" href="{% url 'user_app:logout_view' %}">Logout</a>   
             <div>
           </div>
         </div>
       </nav>
-    <!-- Navbar -->
-    </header>
-    <!--Main NAavigation-->
 
-    {% block content %}
-    {% endblock content %}
+      <!-- <div style="text-align: center; margin-top: 70px;" >
+        <h1>Welcome to TeknoTrade!</h1>
+      </div> -->
+      {% block content %}
+      {% endblock content %}
 
-    <!--Footer-->
-    <footer class="bg-light text-lg-start">
-      <div class="text-center py-4 align-items-center mt-5">
-        <p>Powered by: </p>
-      
-        <a href="https://www.python.org/"
-          class="btn btn-dark m-1"
-          role="button"
-          rel="nofollow"
-          target="_blank">
-        <i class="fab fa-python fa-2x"></i>
-        </a>
-        <a
-          href="https://developer.mozilla.org/en-US/docs/Web/HTML"
-          class="btn btn-warning m-1"
-          role="button"
-          rel="nofollow"
-          target="_blank"
-        >
-        <i class="fab fa-html5 fa-2x"></i>
-        </a>
-        <a 
-        href="https://www.w3schools.com/css/css_intro.asp"
-        role="button"
-        rel="nofollow"
-        class="btn btn-success m-1"
-        target="_blank"
-        >
-        <i class="fab fa-css3-alt fa-2x"></i>
-      </a>
-        <a
-          href="https://getbootstrap.com/docs/5.0/getting-started/introduction/"
-          class="btn btn-danger m-1"
-          role="button"
-          rel="nofollow"
-          target="_blank"
-        >
-        <i class="fab fa-bootstrap fa-2x"></i>
-        </a>
-        <a
-          href="https://www.djangoproject.com/"
-          class="btn btn-primary m-1"
-          role="button"
-          rel="nofollow"
-          target="_blank"
-        >
-        <i class="fas fa-database fa-2x"></i>
-        </a>
-        
-        
-      </div>
-      <!-- Copyright -->
-      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-        © 2021 Copyright:
-        <a class="text-dark" href="#">The Irregulars</a>. All Rights Reserved.
-      </div>
-      <!-- Copyright -->
-    </footer>
-    <!--Footer-->
-
-    <!-- MDB -->
-    <script type="text/javascript" src="{% static 'js/mdb.min.js.map' %}"></script>
-    <script src="{% static 'js/mdb.min.js' %}"></script>
-    <!-- Custom scripts -->
-    <!-- <script type="text/javascript" src="js/script.js"></script> -->
-    <!-- <script src="/public/maindashboard/js/"></script> -->
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+      <!-- Optional JavaScript; choose one of the two! -->
+  
+      <!-- Option 1: Bootstrap Bundle with Popper -->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
