--- a/templates/contact.html
+++ b/templates/contact.html
@@ -184,7 +184,7 @@
 					<div class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i>
 					</div>
 					<div class="text">
-						<h3>Adress</h3>
+						<h3>Address</h3>
 						<p>Natalio B. Bacalso Ave, Cebu City, 6000 Cebu</p>
 					</div>
 				</div>
@@ -207,7 +207,7 @@
 			</div>
 			<div class="contactForm">
 				<form>
-					<h2>Send Message</h2>
+					<h2>How can we help you?</h2>
 					<div class="inputBox">
 						<input type="text" name="required">
 						<span>Full Name</span>
