--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -7,15 +8,8 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="{% static 'css/global.css' %}" rel="stylesheet">
     <style>
-      body {
-        font-family: "Lato", Arial, sans-serif;
-        font-size: 16px;
-        line-height: 1.8;
-        font-weight: normal;
-        background: #f2d6eb;
-        color: gray;
-      }
       .login-wrap {
         position: relative;
         background: #3c3d47;
@@ -40,7 +34,7 @@
       .field-icon {
         position: absolute;
         top: 50%;
-        right: 15px;
+        right: 28px;
         -webkit-transform: translateY(-50%);
         -ms-transform: translateY(-50%);
         transform: translateY(-50%);
@@ -81,9 +75,9 @@
         background: transparent;
       }
       .form-control {
-        height: 52px;
+        height: 40px;
         color: #fff !important;
-        font-size: 16px;
+        font-size: 12px;
         border-radius: 40px;
         -webkit-box-shadow: none;
         box-shadow: none;
@@ -99,7 +93,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-7 col-lg-5">
-            <div class="login-wrap p-4 p-md-5 mt-5">
+            <div class="login-wrap p-5 mt-5 pb-4">
               <h3 class="text-center mb-4">Create Your Account</h3>
               <form method="POST" action="{% url 'user_app:register_view' %}" class="signup-form">
                 {% csrf_token %}
