--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -188,10 +188,13 @@
                         </div>
                         <div class="card-body">
                             <h4 class="card-title text-center">John Efren Pila</h4>
-                            <p class="card-text text-center"><strong>Quality Assurance Team</strong></p>
+                            <p class="card-text text-center"><strong>Front-end Developer</strong></p>
                             <p style="text-align: justify;
                             text-justify: inter-word;" class="card-text text-center">
-                            Responsible for tracking the development process of the project from start to finish and oversee production testing.
+                           Professional Goals: Full Stack
+                           Hobbies: Listening to music, Go to relaxing places, Adventurous, Eating
+                           Skills: Fast Learner, Multitasking, Funny
+                           Areas of Expertise: Python, Java, Reactjs, php, html
                             </p>
                         </div>
                         <hr>
@@ -227,10 +230,14 @@
                         
                         <div class="card-body">
                             <h4 class="card-title text-center">Venz Harold Cañeda</h4>
-                            <p class="card-text text-center"><strong>Quality Assurance Team</strong></p>
+                            <p class="card-text text-center"><strong>Front-end Developer</strong></p>
                             <p style="text-align: justify;
                             text-justify: inter-word;" class="card-text text-center">
-                            Responsible for tracking the development process of the project from start to finish and oversee production testing.</p>
+                           Professional Goals: Web Designer
+                           Hobbies: Watching Movies/Anime, Reading Manga/Manhwa/Manhua, Sleeping</p>
+                           Skills: Great Listener, Team player, 
+                           Areas of Expertise: Python, Java, js, php, html
+                          </p>
                         </div>
                         <hr>
                         <li class="nav-item me-3 me-lg-0 d-flex flex-row justify-content-center mb-2" style="list-style: none; text-align: center;">
@@ -260,12 +267,13 @@
                         </div>
                         <div class="card-body">
                             <h4 class="card-title text-center">John Philip Samson</h4>
-                            <p class="card-text text-center"><strong>Software Documentation Team</strong></p>
+                            <p class="card-text text-center"><strong>Front-end Developer</strong></p>
                             <p style="text-align: justify;
                             text-justify: inter-word;" class="card-text text-center">
-                            Responsible for the documentation of 
-                            the system application and for the 
-                            provision of the system user guide.
+                            Professional Goals: Web Developer
+                            Hobbies: Playing Online Games, basketball, taking care of pets, watching movies.
+                            Skills: listening, communication, adaptability skills.
+                            Areas of Expertise: front-end, python.
                             </p>
                         </div>
                         <hr>
