--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -234,7 +234,7 @@
                             <p style="text-align: justify;
                             text-justify: inter-word;" class="card-text text-center">
                            Professional Goals: Web Designer
-                           Hobbies: Watching Movies/Anime, Reading Manga/Manhwa/Manhua, Sleeping</p>
+                           Hobbies: Watching Movies/Anime, Reading Manga/Manhwa/Manhua, Sleeping
                            Skills: Great Listener, Team player, 
                            Areas of Expertise: Python, Java, js, php, html
                           </p>
