--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -8,15 +8,16 @@
 <style>
  .about-picture{
     /* border-radius: 50%; */
-    height: 200px; 
-    width: 200px; 
+    height: 150px; 
+    width: 150px; 
     margin: 0 auto;
     margin-top: 15px;
     box-shadow: 5px 5px 10px gray;
  }
  .card-dodong{
+     padding: 10px;
      margin-top: 15px;
-     max-height: 500px;
+     max-height: 800px;
      height: 100%;
      transition:  0.35s;
      border: 1px solid gainsboro;
@@ -33,12 +34,12 @@
  }
  @media (max-width:1200px ) {
      .about-picture{
-         height: 150px;
-         width: 150px;
+         height: 100px;
+         width: 100px;
      }
      .card-dodong{
          font-size: 12px;
-         height: 90%;
+         height: 100%;
      }
  }
  @media (max-width:768px) {
@@ -51,11 +52,11 @@
   <!-- Carousel wrapper -->
   <div id="introCarousel" class="carousel slide carousel-fade shadow-2-strong" data-mdb-ride="carousel">
     <!-- Indicators -->
-    <ol class="carousel-indicators">
+    <!-- <ol class="carousel-indicators">
       <li data-mdb-target="#introCarousel" data-mdb-slide-to="0" class="active"></li>
       <li data-mdb-target="#introCarousel" data-mdb-slide-to="1"></li>
       <li data-mdb-target="#introCarousel" data-mdb-slide-to="2"></li>
-    </ol>
+    </ol> -->
 
     <!-- Inner -->
     <div class="carousel-inner">
@@ -64,8 +65,9 @@
         <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
           <div class="d-flex justify-content-center align-items-center h-100">
             <div class="text-white text-center">
-              <h1 class="mb-3">TeknoTrade: A Technologian Barter System with auto-tagging technology and distance based filtering</h1>
-              <h5 class="mb-4">We help you find what you we're looking for</h5>
+              <h1 class="mb-1">TeknoTrade: A Technologian Barter System with auto-tagging technology and distance based filtering</h1>
+              <br>
+              <h5 class="mb-1">We help you find what you we're looking for</h5>
               <!-- <a
                 class="btn btn-outline-light btn-lg m-2"
                 href="/establishments-login"
@@ -84,14 +86,14 @@
       </div>
 
     <!-- Controls -->
-    <a class="carousel-control-prev" href="#introCarousel" role="button" data-mdb-slide="prev">
+    <!-- <a class="carousel-control-prev" href="#introCarousel" role="button" data-mdb-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
     <a class="carousel-control-next" href="#introCarousel" role="button" data-mdb-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
-    </a>
+    </a> -->
   </div>
   <!-- Carousel wrapper -->
 </header>
@@ -117,12 +119,12 @@
                         </div>
                         <div class="card-body">
                             <h4 class="card-title text-center">Fatima Marie Montesclaros</h4>
-                            <p class="card-text text-center"><strong>Team Manager & UI/UX Designer</strong></p>
-                            <p style="text-align: justify;
-                            text-justify: inter-word;" class="card-text text-center">
-                            One of the backend of the application,
-                            schedules meetings and 
-                            keeps track of the projects progress.
+                            <p class="card-text text-center"><strong>Backend Developer</strong></p>
+                            <p class="card-text text-md-left">
+                            <b>Professional Goals:</b> <i>Software Engineer</i> <br>
+                            <b>Hobbies:</b> Cleaning, Babysitting, Listening to music, Watching Movies, Travelling, Making DIY projects, Decorating <br>
+                            <b>Skills:</b> Versatile, Life-long learner, Team Player, Time Management, Multitasking, Motivated, Organized, Versatile <br>
+                            <b>Areas of Expertise:</b> <i>Java, Python, C#, C, Git, PHP, MySQL, WordPress</i>
                             </p>
                         </div>
                         <hr>
@@ -153,11 +155,12 @@
                         </div>
                         <div class="card-body">
                             <h4 class="card-title text-center">Emmanuel Rabe</h4>
-                            <p class="card-text text-center"><strong>System Developer & UI/UX Designer</strong></p>
-                            <p style="text-align: justify;
-                            text-justify: inter-word;" class="card-text text-center">
-                            Responsible for the overall implementation of both the Backend or server side of the application
-                            and the Frontend or client side.
+                            <p class="card-text text-center"><strong>Database Developer</strong></p>
+                            <p class="card-text text-md-left">
+                              <b>Professional Goals:</b> <i>Database Administrator</i> <br>
+                              <b>Hobbies:</b>  <br>
+                              <b>Skills:</b>  <br>
+                              <b>Areas of Expertise:</b> <i>Python</i>
                             </p>
                         </div>
                         <hr>
@@ -189,12 +192,11 @@
                         <div class="card-body">
                             <h4 class="card-title text-center">John Efren Pila</h4>
                             <p class="card-text text-center"><strong>Front-end Developer</strong></p>
-                            <p style="text-align: justify;
-                            text-justify: inter-word;" class="card-text text-center">
-                           Professional Goals: Full Stack
-                           Hobbies: Listening to music, Go to relaxing places, Adventurous, Eating
-                           Skills: Fast Learner, Multitasking, Funny
-                           Areas of Expertise: Python, Java, Reactjs, php, html
+                            <p class="card-text text-md-left">
+                            <b>Professional Goals:</b> <i>Full Stack Developer</i> <br>
+                            <b>Hobbies:</b> Listening to music, Go to relaxing places, Adventurous, Eating <br>
+                            <b>Skills:</b> Fast Learner, Multitasking, Funny <br>
+                            <b>Areas of Expertise:</b> <i>Python, Java, Reactjs, PHP, HTML</i>
                             </p>
                         </div>
                         <hr>
@@ -231,12 +233,11 @@
                         <div class="card-body">
                             <h4 class="card-title text-center">Venz Harold Cañeda</h4>
                             <p class="card-text text-center"><strong>Front-end Developer</strong></p>
-                            <p style="text-align: justify;
-                            text-justify: inter-word;" class="card-text text-center">
-                           Professional Goals: Web Designer
-                           Hobbies: Watching Movies/Anime, Reading Manga/Manhwa/Manhua, Sleeping
-                           Skills: Great Listener, Team player, 
-                           Areas of Expertise: Python, Java, js, php, html
+                            <p class="card-text text-md-left">
+                            <b>Professional Goals:</b> <i>Web Designer</i> <br>
+                            <b>Hobbies:</b> Watching Movies/Anime, Reading Manga/Manhwa/Manhua, Sleeping <br>
+                            <b>Skills:</b> Great Listener, Team player <br>
+                            <b>Areas of Expertise:</b> <i>Python, Java, JS, PHP, HTML</i>
                           </p>
                         </div>
                         <hr>
@@ -268,12 +269,11 @@
                         <div class="card-body">
                             <h4 class="card-title text-center">John Philip Samson</h4>
                             <p class="card-text text-center"><strong>Front-end Developer</strong></p>
-                            <p style="text-align: justify;
-                            text-justify: inter-word;" class="card-text text-center">
-                            Professional Goals: Web Developer
-                            Hobbies: Playing Online Games, basketball, taking care of pets, watching movies.
-                            Skills: listening, communication, adaptability skills.
-                            Areas of Expertise: front-end, python.
+                            <p class="card-text text-md-left">
+                            <b>Professional Goals:</b> <i>Web Developer</i> <br>
+                            <b>Hobbies:</b> Playing Online Games, Basketball, Taking care of pets, Watching movies <br>
+                            <b>Skills:</b> Listening, Communication, Adaptability skills <br>
+                            <b>Areas of Expertise:</b> <i>Front-end, Python</i>
                             </p>
                         </div>
                         <hr>
