Added bg for base html

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8,5 +8,6 @@
     height: 277px;
 }
 body{
-    background-color: #f2d6eb;
+    /* background-color: #f2d6eb; */
+    background-image: url("/static/img/bg.jpg");
 }
