--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,10 +6,11 @@
 {% block content %}
 
 <style>
-	body {
+	/* body {
         background: #f2d6eb;
+		background-image: url("/static/img/bg.jpg");
         color: gray;
-      }
+      } */
 	.contact
 	{
 		font-family: "Lato", Arial, sans-serif;
