--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,7 +15,7 @@
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	background: url(bg.jpg);
+	background: url("/static/img/bg.jpg");
 	background-size: cover;
 }
 .contact .content
