--- a/templates/base_user.html
+++ b/templates/base_user.html
@@ -21,6 +21,20 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
    
     <title>TeknoTrade</title>
+
+    <style>
+      body {
+        /* background-color: #7e605a; */
+        background-image: url("/static/img/bg.jpg");
+      }
+      a.highlight {
+        font-weight: bold;
+        font-size: 16px;
+      }
+      a.highlight:hover {
+        font-size: 20px;
+      }
+    </style>
   </head>
   <body>
     <!--Main Navigation-->
@@ -39,11 +53,11 @@
           <div class="collapse navbar-collapse" id="navbarExample01">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item active">
-                <a class="nav-link" aria-current="page" href="{% url 'user_app:home_view' %}">Home</a>
+                <a class="nav-link highlight" aria-current="page" href="{% url 'user_app:home_view' %}">Home</a>
               </li>
               <li class="nav-item dropdown">
                 <a
-                  class="nav-link dropdown-toggle"
+                  class="nav-link dropdown-toggle highlight"
                   id="navbarDropdownMenuLink"
                   role="button"
                   data-mdb-toggle="dropdown"
@@ -59,10 +73,10 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'user_app:about_view' %}">About us</a>
+                <a class="nav-link highlight" href="{% url 'user_app:about_view' %}">About us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'user_app:contact_view' %}">Contact us</a>
+                <a class="nav-link highlight" href="{% url 'user_app:contact_view' %}">Contact us</a>
               </li>
             </ul>
 
