Updated aboutus html

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -155,12 +155,12 @@
                         </div>
                         <div class="card-body">
                             <h4 class="card-title text-center">Emmanuel Rabe</h4>
-                            <p class="card-text text-center"><strong>Database Developer</strong></p>
+                            <p class="card-text text-center"><strong>Backend Developer</strong></p>
                             <p class="card-text text-md-left">
-                              <b>Professional Goals:</b> <i>Database Administrator</i> <br>
-                              <b>Hobbies:</b>  <br>
-                              <b>Skills:</b>  <br>
-                              <b>Areas of Expertise:</b> <i>Python</i>
+                              <b>Professional Goals:</b> <i>Web Developer</i> <br>
+                              <b>Hobbies:</b> Reading manhwa, Playing guitar, Watching movies <br>
+                              <b>Skills:</b> Team Player <br>
+                              <b>Areas of Expertise:</b> Python, Html, Css , Java, C <i>Python</i>
                             </p>
                         </div>
                         <hr>
