updated about us and contact us

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -273,7 +273,7 @@
                             <b>Professional Goals:</b> <i>Web Developer</i> <br>
                             <b>Hobbies:</b> Playing Online Games, Basketball, Taking care of pets, Watching movies <br>
                             <b>Skills:</b> Listening, Communication, Adaptability skills <br>
-                            <b>Areas of Expertise:</b> <i>Front-end, Python</i>
+                            <b>Areas of Expertise:</b> <i>Python, Wordpress, Html, Css, Java</i>
                             </p>
                         </div>
                         <hr>
