--- a/templates/contact.html
+++ b/templates/contact.html
@@ -77,15 +77,15 @@
 	{
 		display: flex;
 		margin-left: 20px;
-		font-size: 16px;
+		font-size: 20px;
 		color: #000000;
 		flex-direction: column;
-		font-weight: 300;
+		font-weight: 500;
 	}
 	.container .contactInfo .box .text h3
 	{
 		font-weight: 500;
-		color: #00bcd4;
+		color: #000000;
 	}
 	.contactForm   
 	{
