--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -235,7 +235,7 @@
                             <p class="card-text text-center"><strong>Front-end Developer</strong></p>
                             <p class="card-text text-md-left">
                             <b>Professional Goals:</b> <i>Web Designer</i> <br>
-                            <b>Hobbies:</b> Watching Movies/Anime, Reading Manga/Manhwa/Manhua, Sleeping <br>
+                            <b>Hobbies:</b> Watching Movies/Anime, Reading Manga/Manhwa/Manhua, Playing PC Games <br>
                             <b>Skills:</b> Great Listener, Team player <br>
                             <b>Areas of Expertise:</b> <i>Python, Java, JS, PHP, HTML</i>
                           </p>
