--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,130 @@
-{% extends "base_user.html" %}
+{% extends "layout/main.html" %}
 {% load static %}
-
 
 {% block content %}
 
-<div style="text-align: center; margin-top: 70px;" >
-    <h1>Welcome to TeknoTrade!</h1>
-</div>
+<!-- Product Catagories Area Start -->
+<div class="products-catagories-area clearfix">
+    <div class="amado-pro-catagory clearfix">
 
+        <!-- Single Catagory -->
+        <div class="single-products-catagory clearfix">
+            <a href="shop.html">
+                <img src="{% static 'img/product1.jpg' %}" alt="">
+                <!-- Hover Content -->
+                <div class="hover-content">
+                    <div class="line"></div>
+                    <p>From $180</p>
+                    <h4>Modern Chair</h4>
+                </div>
+            </a>
+        </div>
+
+        <!-- Single Catagory -->
+        <div class="single-products-catagory clearfix">
+            <a href="shop.html">
+                <img src="{% static 'img/product1.jpg' %}" alt="">
+                <!-- Hover Content -->
+                <div class="hover-content">
+                    <div class="line"></div>
+                    <p>From $180</p>
+                    <h4>Minimalistic Plant Pot</h4>
+                </div>
+            </a>
+        </div>
+
+        <!-- Single Catagory -->
+        <div class="single-products-catagory clearfix">
+            <a href="shop.html">
+                <img src="{% static 'img/product1.jpg' %}" alt="">
+                <!-- Hover Content -->
+                <div class="hover-content">
+                    <div class="line"></div>
+                    <p>From $180</p>
+                    <h4>Modern Chair</h4>
+                </div>
+            </a>
+        </div>
+
+        <!-- Single Catagory -->
+        <div class="single-products-catagory clearfix">
+            <a href="shop.html">
+                <img src="{% static 'img/product1.jpg' %}" alt="">
+                <!-- Hover Content -->
+                <div class="hover-content">
+                    <div class="line"></div>
+                    <p>From $180</p>
+                    <h4>Night Stand</h4>
+                </div>
+            </a>
+        </div>
+
+        <!-- Single Catagory -->
+        <div class="single-products-catagory clearfix">
+            <a href="shop.html">
+                <img src="{% static 'img/product1.jpg' %}" alt="">
+                <!-- Hover Content -->
+                <div class="hover-content">
+                    <div class="line"></div>
+                    <p>From $18</p>
+                    <h4>Plant Pot</h4>
+                </div>
+            </a>
+        </div>
+
+        <!-- Single Catagory -->
+        <div class="single-products-catagory clearfix">
+            <a href="shop.html">
+                <img src="{% static 'img/product1.jpg' %}" alt="">
+                <!-- Hover Content -->
+                <div class="hover-content">
+                    <div class="line"></div>
+                    <p>From $320</p>
+                    <h4>Small Table</h4>
+                </div>
+            </a>
+        </div>
+
+        <!-- Single Catagory -->
+        <div class="single-products-catagory clearfix">
+            <a href="shop.html">
+                <img src="{% static 'img/product1.jpg' %}" alt="">
+                <!-- Hover Content -->
+                <div class="hover-content">
+                    <div class="line"></div>
+                    <p>From $318</p>
+                    <h4>Metallic Chair</h4>
+                </div>
+            </a>
+        </div>
+
+        <!-- Single Catagory -->
+        <div class="single-products-catagory clearfix">
+            <a href="shop.html">
+                <img src="{% static 'img/product1.jpg' %}" alt="">
+                <!-- Hover Content -->
+                <div class="hover-content">
+                    <div class="line"></div>
+                    <p>From $318</p>
+                    <h4>Modern Rocking Chair</h4>
+                </div>
+            </a>
+        </div>
+
+        <!-- Single Catagory -->
+        <div class="single-products-catagory clearfix">
+            <a href="shop.html">
+                <img src="{% static 'img/product1.jpg' %}" alt="">
+                <!-- Hover Content -->
+                <div class="hover-content">
+                    <div class="line"></div>
+                    <p>From $318</p>
+                    <h4>Home Deco</h4>
+                </div>
+            </a>
+        </div>
+    </div>
+</div>
+<!-- Product Catagories Area End -->
 
 {% endblock content %}
