--- a/templates/home.html
+++ b/templates/home.html
@@ -14,8 +14,8 @@
                 <!-- Hover Content -->
                 <div class="hover-content">
                     <div class="line"></div>
-                    <p>From $180</p>
-                    <h4>Modern Chair</h4>
+                    <!--<p>From $180</p>-->
+                    <h4>Books</h4>
                 </div>
             </a>
         </div>
@@ -27,8 +27,8 @@
                 <!-- Hover Content -->
                 <div class="hover-content">
                     <div class="line"></div>
-                    <p>From $180</p>
-                    <h4>Minimalistic Plant Pot</h4>
+                    <!--<p>From $180</p>-->
+                    <h4>Mobile Phones</h4>
                 </div>
             </a>
         </div>
@@ -40,8 +40,8 @@
                 <!-- Hover Content -->
                 <div class="hover-content">
                     <div class="line"></div>
-                    <p>From $180</p>
-                    <h4>Modern Chair</h4>
+                    <!--<p>From $180</p>-->
+                    <h4>Laptops</h4>
                 </div>
             </a>
         </div>
@@ -53,8 +53,8 @@
                 <!-- Hover Content -->
                 <div class="hover-content">
                     <div class="line"></div>
-                    <p>From $180</p>
-                    <h4>Night Stand</h4>
+                    <!--<p>From $180</p>-->
+                    <h4>Arts & Crafts</h4>
                 </div>
             </a>
         </div>
@@ -66,8 +66,8 @@
                 <!-- Hover Content -->
                 <div class="hover-content">
                     <div class="line"></div>
-                    <p>From $18</p>
-                    <h4>Plant Pot</h4>
+                    <!--<p>From $18</p>-->
+                    <h4>Study Supplies</h4>
                 </div>
             </a>
         </div>
@@ -79,18 +79,18 @@
                 <!-- Hover Content -->
                 <div class="hover-content">
                     <div class="line"></div>
-                    <p>From $320</p>
-                    <h4>Small Table</h4>
+                    <!--<p>From $320</p>-->
+                    <h4>Sports</h4>
                 </div>
             </a>
         </div>
 
         <!-- Single Catagory -->
-        <div class="single-products-catagory clearfix">
+        <!--<div class="single-products-catagory clearfix">
             <a href="shop.html">
                 <img src="{% static 'img/product1.jpg' %}" alt="">
                 <!-- Hover Content -->
-                <div class="hover-content">
+                <!--<div class="hover-content">
                     <div class="line"></div>
                     <p>From $318</p>
                     <h4>Metallic Chair</h4>
@@ -99,11 +99,11 @@
         </div>
 
         <!-- Single Catagory -->
-        <div class="single-products-catagory clearfix">
+        <!--<div class="single-products-catagory clearfix">
             <a href="shop.html">
                 <img src="{% static 'img/product1.jpg' %}" alt="">
                 <!-- Hover Content -->
-                <div class="hover-content">
+                <!--<div class="hover-content">
                     <div class="line"></div>
                     <p>From $318</p>
                     <h4>Modern Rocking Chair</h4>
@@ -112,11 +112,11 @@
         </div>
 
         <!-- Single Catagory -->
-        <div class="single-products-catagory clearfix">
+        <!--<div class="single-products-catagory clearfix">
             <a href="shop.html">
                 <img src="{% static 'img/product1.jpg' %}" alt="">
                 <!-- Hover Content -->
-                <div class="hover-content">
+                <!--<div class="hover-content">
                     <div class="line"></div>
                     <p>From $318</p>
                     <h4>Home Deco</h4>
