--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -144,16 +144,37 @@
             <nav class="amado-nav">
                 <ul>
                     <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="shop.html">Search Product</a></li>
-                    <li><a href="product-details.html">Add Product</a></li>
-                    <li><a href="cart.html">View Offers</a></li>
-                    <li><a href="checkout.html">Cart</a></li>
+                    <li><a href="shop.html">Shop</a></li>
+                    <li><a href="product-details.html">Product</a></li>
+                    <li><a href="cart.html">Cart</a></li>
+                    <li><a href="checkout.html">Checkout</a></li>
+                    <li> </li>
+                    <!-- <li><a href="checkout.html">Submit a report</a></li>
                 </ul>
             </nav>
+            <!-- Modal Group -->
+
+            <div class="modal" id="mymodal">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header>">
+                            <h2 class="modal-title">how to be you you</h2>
+                        </div>
+                        <div class="modal-body">
+                            <p>asdaqwjehajkshdjkashqwehsdhashdhqwejkqwehkjashdaskjdhajksdhkqwe
+                                ashdjgbasjhdgasdjhgasd
+                                asdhasdjkashdasd.</p>
+                        </div>
+                    </div><!-- end modal-content-->
+                </div><!-- end .modal-dialog -->
+            </div><!-- end modal -->
+
+            <!-- End Modal -->
+
             <!-- Button Group -->
             <div class="amado-btn-group mt-30 mb-100">
                 <a href="#" class="btn amado-btn mb-15 core-ignore">Discount</a>
-                <a href="#" class="btn amado-btn active core-ignore">New this week</a>
+                <a href="#" data-toggle="modal" data-target="#mymodal" class="btn amado-btn active core-ignore">Submit a report</a>
             </div>
             <!-- Cart Menu -->
             <div class="cart-fav-search mb-100">
