added add product page

--- a/templates/layout/footer.html
+++ b/templates/layout/footer.html
@@ -39,7 +39,7 @@
                         </div>
                         <!-- Copywrite Text -->
                         <p class="copywrite"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This is made with <i class="far fa-heart" aria-hidden="true"></i> by <a href="#" target="_blank">The Irregulars</a>
+    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This is made with <i class="far fa-heart" aria-hidden="true"></i> by <a class="m-0 p-0" href="#" target="_blank">The Irregulars</a>
     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                         <p class="copywrite">Powered by<br>
                             <a href="https://www.python.org/"
