--- a/templates/base_user.html
+++ b/templates/base_user.html
@@ -44,7 +44,7 @@
         <div class="container-fluid">
           <!-- Navbar brand -->
           <a class="navbar-brand nav-link" href="{% url 'user_app:home_view' %}">
-            <strong>TT | TeknoTrade</strong>
+            <strong>TT | TeknoTr</strong>
           </a>
           <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
             aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,7 +62,7 @@
                   role="button"
                   data-mdb-toggle="dropdown"
                   aria-expanded="false"
-                >User Portals</a>
+                >User</a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <li>
                     <a class="dropdown-item" href="/client-login">User Portal</a>
