--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -47,7 +47,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="userPortalsDropdown">
                         <li>
-                            <a class="dropdown-item" href="/client-login">User Portal</a>
+                            <a class="dropdown-item" href="/client-login" data-toggle = "modal" data-target = "#myModal">Profile</a>
                         </li>
                         <li>
                             <a class="dropdown-item" href="/establishments-login">Establishment Portal</a>
@@ -96,7 +96,29 @@
         </div>
     </nav>
     <!-- Navbar -->
+<!-- Modal -->
+  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+    
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Modal Header</h4>
+        </div>
+        <div class="modal-body">
+          <label class="label" for="Name">Name</label>
+          <input name="name" type="text" class="form-control" >
 
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+      
+    </div>
+  </div>
+<!-- end of Modal -->
     <!-- Search Wrapper Area Start -->
     <div class="search-wrapper section-padding-100">
         <div class="search-close">
